--- a/test.html
+++ b/test.html
@@ -1,46 +1,6 @@
 <html>
   <head>
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-      }
-
-      body {
-        font-family: Verdana;
-      }
-
-      .page {
-        background: skyblue;
-        page-break-after: always;
-        height: 96.4%;
-        padding: 20px;
-      }
-
-      .page:last-child {
-        background: lightsalmon;
-      }
-
-      h1 {
-        text-align: center;
-      }
-
-      table {
-        width: 100%;
-        border-collapse: collapse;
-      }
-
-      th  {
-        text-align: left;
-        color: white;
-        background: green;
-      }
-
-      th, td {
-        border: 1px solid black;
-        padding: 5px;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="test.css">
   </head>
   <body>
     <div class="page">
